commit back to project

--- a/.github/workflows/update-formula.yml
+++ b/.github/workflows/update-formula.yml
@@ -14,11 +14,10 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
       - name: Generate formula
         run:
           python3 bin/formula.py --name ${{ github.event.client_payload.name }} --tag ${{ github.event.client_payload.tag }} --repo ${{ github.event.client_payload.repo }}
 
       - name: Commit changes
-        run: |
-          echo "Committing changes..."
-          # TODO: Implement this
+        uses: actions-x/commit@v6
