--- a/.github/workflows/update-formula.yml
+++ b/.github/workflows/update-formula.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Generate formula
-        run:
+        run: |
           python3 bin/formula.py \
             --name ${{ github.event.client_payload.name }} \
             --version ${{ github.event.client_payload.version }} \
