add GH_TOKEN env var to generate formula step

--- a/.github/workflows/update-formula.yml
+++ b/.github/workflows/update-formula.yml
@@ -16,6 +16,8 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Generate formula
+        env:
+          GH_TOKEN: ${{ github.token }}
         run: |
           python3 bin/formula.py \
             --name ${{ github.event.client_payload.name }} \
